# OOP_lab2_prisoner_dilemma

./: CMakeLists.txt  README.md  main.cpp  pris_del.cpp  pris_del.h  Основы ООП -  Задача 2 (Дилемма заключенного).txt
Constants/: Constants.h
Factory/: Factory.cpp  Factory.h
History/: History.cpp
Histrory/: History.h
Matrix/: Matrix.cpp  Matrix.h
Result/: Result.cpp  Result.h
Simulator/: Help.cpp  Help.h  Simulator.cpp  Simulator.h
Strategies/Class_strategy/: Class_str.h
Strategies/Strategy_1/: Strategy_1.cpp  Strategy_1.h
Strategies/Strategy_1_alw_coop/: Strategy_1.h
Strategies/Strategy_2/: Strategy_2.cpp  Strategy_2.h
Strategies/Strategy_2_alw_def/: Strategy_2.h
Strategies/Strategy_3/: Strategy_3.h
Strategies/Strategy_3_def_if_def/: Strategy_3.cpp  Strategy_3.h
Strategies/Strategy_4/: Strategy_4.h
Strategies/Strategy_4_conf_file/: Strategy_4.cpp  Strategy_4.h  config_str_4.txt
Strategies/Strategy_5/: Strategy_5.h
Strategies/Strategy_5_alternation/: Strategy_5.cpp  Strategy_5.h
Strategies/Strategy_6/: Strategy_6.h
Strategies/Strategy_6_rand/: Strategy_6.cpp  Strategy_6.h
Strategies/Strategy_7_meta/: Strategy_7.cpp  Strategy_7.h
Tests/: gtest.cpp
